{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 52,
  "lineage": "805309eb-4a7f-8b37-a693-0e592a9a0298",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005fc0f236362e99f",
            "arn": "arn:aws:ec2:us-east-1:023810238502:instance/i-086b9cd792c901af3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-086b9cd792c901af3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "jenkins-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-006b646f22d7e121b",
            "private_dns": "ip-10-0-1-42.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.42",
            "public_dns": "ec2-3-92-223-29.compute-1.amazonaws.com",
            "public_ip": "3.92.223.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07fad0360af548fe1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09df51992599f1a27",
            "tags": {
              "Name": "Jenkins-Server"
            },
            "tags_all": {
              "Name": "Jenkins-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-098791f05c0a99bec"
            ]
          },
          "dependencies": [
            "aws_key_pair.jenkins_key",
            "aws_security_group.jenkins_sg",
            "aws_subnet.jenkins_subnet",
            "aws_vpc.jenkins_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jenkins_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:023810238502:internet-gateway/igw-0fa9896a1aaf9d9d3",
            "id": "igw-0fa9896a1aaf9d9d3",
            "owner_id": "023810238502",
            "tags": {
              "Name": "jenkins-igw"
            },
            "tags_all": {
              "Name": "jenkins-igw"
            },
            "vpc_id": "vpc-02ec413c3abaaef57"
          },
          "dependencies": [
            "aws_vpc.jenkins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jenkins_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:023810238502:route-table/rtb-09cd50ed8df6afea4",
            "id": "rtb-09cd50ed8df6afea4",
            "owner_id": "023810238502",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fa9896a1aaf9d9d3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jenkins-rt"
            },
            "tags_all": {
              "Name": "jenkins-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ec413c3abaaef57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.jenkins_igw",
            "aws_vpc.jenkins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jenkins_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0e1eb55879cf276",
            "route_table_id": "rtb-09cd50ed8df6afea4",
            "subnet_id": "subnet-09df51992599f1a27"
          },
          "dependencies": [
            "aws_internet_gateway.jenkins_igw",
            "aws_route_table.jenkins_rt",
            "aws_subnet.jenkins_subnet",
            "aws_vpc.jenkins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:023810238502:security-group/sg-098791f05c0a99bec",
            "description": "Security group for Jenkins server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-098791f05c0a99bec",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "jenkins-security-group",
            "name_prefix": "",
            "owner_id": "023810238502",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins-security-group"
            },
            "tags_all": {
              "Name": "jenkins-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ec413c3abaaef57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jenkins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jenkins_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:023810238502:subnet/subnet-09df51992599f1a27",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09df51992599f1a27",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "023810238502",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jenkins-subnet"
            },
            "tags_all": {
              "Name": "jenkins-subnet"
            },
            "vpc_id": "vpc-02ec413c3abaaef57"
          },
          "dependencies": [
            "aws_vpc.jenkins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jenkins_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:023810238502:vpc/vpc-02ec413c3abaaef57",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b4edbcfcd0e8bca4",
            "default_route_table_id": "rtb-0ef7a5f28c1c61fcd",
            "default_security_group_id": "sg-0436162d7af031c1e",
            "dhcp_options_id": "dopt-09effde913e0ae576",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02ec413c3abaaef57",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ef7a5f28c1c61fcd",
            "owner_id": "023810238502",
            "tags": {
              "Name": "jenkins-vpc"
            },
            "tags_all": {
              "Name": "jenkins-vpc"
            }
          }
        }
      ]
    }
  ]
}